--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "vue-text-mask": "^6.1.2"
   },
   "devDependencies": {
-    "node-sass": "^8.0.0",
-    "sass-loader": "^10.1.0"
+   "sass": "^1.77.8",
+    "sass-loader": "10.1.1"
   }
 }
