--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "formidable": "^1.2.2",
     "googleapis": "^109.0.1",
     "html-pdf": "^3.0.1",
-    "moment": "^2.29.1",
+    "moment": "^2.30.1",
+    "moment-lunar": "^0.0.4",
     "nanoid": "2.1.11",
     "nuxt": "^2.15.8",
     "phantom-html-to-pdf": "^0.7.0",
@@ -36,7 +37,7 @@
     "vue-text-mask": "^6.1.2"
   },
   "devDependencies": {
-   "sass": "^1.77.8",
+    "sass": "^1.77.8",
     "sass-loader": "10.1.1"
   }
 }
